--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,20 @@
 {
   "name": "Boredom Hub",
   "short_name": "BoredomHub",
+  "description": "Your ultimate destination for fun and entertainment.",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/8595/8595483.png",
+      "src": "your-logo.png",
       "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "your-logo.png",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ]
