--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "your-logo.png",
+      "src": "Evicly, this is boredom hub logo (1).png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "your-logo.png",
+      "src": "Evicly, this is boredom hub logo (1).png",
       "sizes": "192x192",
       "type": "image/png"
     }
